@@ -12,7 +12,6 @@ import java.io.ObjectOutputStream;
 import java.io.Serializable;
 import java.nio.charset.Charset;
 import java.security.interfaces.ECPublicKey;
-import java.util.Base64;
 
 import static me.matoosh.undernet.p2p.router.Router.logger;
 
@@ -32,21 +31,16 @@ public class NetworkID implements Serializable {
      */
     private byte[] data;
 
-    public NetworkID() {
-    }
-
+    public NetworkID() { }
     /**
      * Creates a network id given its text representation.
-     *
      * @param value
      */
     public NetworkID(String value) {
         this.data = getByteValue(value);
     }
-
     /**
      * Creates a network id given its data.
-     *
      * @param id
      */
     public NetworkID(byte[] id) {
@@ -55,11 +49,10 @@ public class NetworkID implements Serializable {
 
     /**
      * Checks whether the network id is valid.
-     *
      * @return
      */
     public boolean isValid() {
-        if (data.length == NETWORK_ID_LENGTH) {
+        if(data.length == NETWORK_ID_LENGTH) {
             return true;
         } else {
             logger.error("Network ID is not " + NETWORK_ID_LENGTH + " bytes long! Current number of bytes: " + data.length);
@@ -69,22 +62,20 @@ public class NetworkID implements Serializable {
 
     /**
      * Calculates the distance between this id and an other id.
-     *
      * @param other
      * @return
      */
     public byte[] distanceTo(NetworkID other) {
         byte[] output = new byte[NETWORK_ID_LENGTH];
         int i = 0;
-        for (byte b : other.data) {
-            output[i] = (byte) (b ^ this.data[i++]);
+        for(byte b : other.data) {
+          output[i] = (byte)(b ^ this.data[i++]);
         }
         return output;
     }
 
     /**
      * Serialization
-     *
      * @param oos
      * @throws IOException
      */
@@ -94,7 +85,6 @@ public class NetworkID implements Serializable {
 
     /**
      * Deserialization
-     *
      * @param ois
      * @throws ClassNotFoundException
      * @throws IOException
@@ -108,39 +98,33 @@ public class NetworkID implements Serializable {
     @Override
     public String toString() {
         return "NID:{" + getStringValue(this.data) +
-                '}';
+                    '}';
     }
 
     /**
      * Returns the value of the given id as a string.
-     *
      * @return
      */
     public static String getStringValue(byte[] data) {
-        return Base64.getEncoder().encodeToString(data);
+        return new sun.misc.BASE64Encoder().encode(data);
     }
 
     /**
      * Returns the value of the id as a string.
-     *
      * @return
      */
     public String getStringValue() {
         return getStringValue(this.data);
     }
-
     /**
      * Gets the network id data.
-     *
      * @return
      */
     public byte[] getData() {
         return this.data;
     }
-
     /**
      * Gets the public key associated with the network id.
-     *
      * @return
      */
     public ECPublicKey getPublicKey() {
@@ -151,14 +135,12 @@ public class NetworkID implements Serializable {
             return null;
         }
     }
-
     /**
      * Sets the network id data.
-     *
      * @param data
      */
     public void setData(byte[] data) {
-        if (data.length != NETWORK_ID_LENGTH) {
+        if(data.length != NETWORK_ID_LENGTH) {
             logger.error("Network ID is not " + NETWORK_ID_LENGTH + " bytes long! Current number of bytes: " + data.length);
             return;
         }
@@ -169,18 +151,22 @@ public class NetworkID implements Serializable {
      * Gets data from net id value.
      */
     public static byte[] getByteValue(String value) {
-        return Base64.getDecoder().decode(value);
+        try {
+            return new sun.misc.BASE64Decoder().decodeBuffer(value);
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return null;
     }
 
     /**
      * Generates a NetworkID from a public key.
-     *
      * @param publicKey
      * @return
      */
     public static NetworkID generateFromPublicKey(ECPublicKey publicKey) {
         byte[] encoded = KeyTools.toUncompressedPoint(publicKey);
-        if (encoded.length != NETWORK_ID_LENGTH) {
+        if(encoded.length != NETWORK_ID_LENGTH) {
             logger.warn("Cannot generate network id from {}, length mismatch! Key length: {}, expected: {}", publicKey, encoded.length, NETWORK_ID_LENGTH);
             return null;
         }
@@ -191,7 +177,6 @@ public class NetworkID implements Serializable {
 
     /**
      * Generates a NetworkID from a string through Keccak.
-     *
      * @param string
      * @return
      */
@@ -203,7 +188,6 @@ public class NetworkID implements Serializable {
 
     /**
      * Compares two byte arrays of the same size.
-     *
      * @param a
      * @param b
      * @return result of comparation; -1 = less than, 0 = equal
@@ -212,15 +196,15 @@ public class NetworkID implements Serializable {
         int diff = 0; //How many bytes are different between these arrays.
 
         //Checking length.
-        if (a.length != b.length) {
+        if(a.length != b.length) {
             return 1;
         }
 
         //Checking bytes.
         for (int i = 0; i < a.length; i++) {
-            if (b[i] < a[i]) {
+            if(b[i] < a[i]) {
                 diff--;
-            } else if (b[i] > a[i]) {
+            } else if(b[i] > a[i]) {
                 diff++;
             }
         }
@@ -230,23 +214,22 @@ public class NetworkID implements Serializable {
 
     /**
      * Checks whether the given network id is equal to this one.
-     *
      * @param obj
      * @return
      */
     @Override
     public boolean equals(Object obj) {
-        if (obj.getClass() == NetworkID.class) {
-            NetworkID other = (NetworkID) obj;
+        if(obj.getClass() == NetworkID.class) {
+            NetworkID other = (NetworkID)obj;
 
             //Checking length.
-            if (this.getData().length != other.getData().length) {
+            if(this.getData().length != other.getData().length) {
                 return false;
             }
 
             //Checking bytes.
             for (int i = 0; i < this.getData().length; i++) {
-                if (this.getData()[i] != other.getData()[i]) {
+                if(this.getData()[i] != other.getData()[i]) {
                     return false;
                 }
             }
@@ -259,7 +242,6 @@ public class NetworkID implements Serializable {
 
     /**
      * Sends a message to the network id destination
-     *
      * @param content
      */
     public void sendMessage(MsgBase content) {
@@ -268,7 +250,6 @@ public class NetworkID implements Serializable {
 
     /**
      * Sends a response to the network id destination.
-     *
      * @param content
      */
     public void sendResponse(MsgBase content) {
